<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>


    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_button">order</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Has Whipped cream? <xliff:g id="hasWhippedCream" example="True">%b</xliff:g></string>
    <string name="order_summary_Chocolate">Has Chocolate? <xliff:g id="hasChocolate" example="False">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="3">%s</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="15">%s</xliff:g></string>
    <string name="thank_you">Thank you!</string>


</resources>
